rtph264pay: Don't use upstream caps with peer_query_caps ()

Calling gst_pad_peer_query_caps () on the src pad with the caps
upstream can produce as a filter from gst_rtp_h264_pay_getcaps ()
is wrong and makes caps negotiation fail if upstream caps are not
NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=695629